# dekapu-master-agent-server

./: main.py  pyproject.toml
app/: config.py
app/api/: control_api.py  group_api.py  instance_api.py  vrchat_api.py  websocket_api.py
app/model/: client.py  group.py  instance.py  launch_option.py  vrchat.py  world.py
app/presentation/model/: client.py  wol_option.py
app/router/: router.py
app/service/: control_service.py  json_cookie_repo.py  websocket_service.py
app/service/vrchat/: group_service.py  instance_service.py
app/util/: auth.py
backend/src/: config.py  main.py
backend/src/api/: control_api.py  group_api.py  instance_api.py  vrchat_api.py  websocket_api.py
backend/src/model/: client.py  group.py  instance.py  launch_option.py  osc.py  world.py
backend/src/router/: router.py
backend/src/service/: control_service.py  websocket_service.py
backend/src/service/vrchat/: group_service.py  (+1 more)
backend/src/util/: auth.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  style.css
frontend/src/: api.js  constants.js  constants.ts  main.js  main.ts  modals.js  modals.ts  state.js  state.ts  utils.js  utils.ts
frontend/src/api/: api.ts  errors.ts  httpClient.ts
frontend/src/elements/: page.js  page.ts  toast.js  toast.ts
frontend/src/features/: closeInstance.js  closeInstance.ts  createInstance.js  createInstance.ts  instanceTable.js  instanceTable.ts  launcher.js  launcher.ts
frontend/src/types/: control.ts  group.ts  instance.ts  world.ts
web/: app.js  index.html
