[project]
name = "dekapu-master-agent-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "pydantic>=2.12.5",
    "pyotp>=2.9.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.38.0",
]
